[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=1]
[ext_resource path="res://IslandDestroy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Materials/textures/icon.png" type="Texture" id=4]
[ext_resource path="res://Materials/textures/cursor.png" type="Texture" id=5]
[ext_resource path="res://SceneTransitionRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Materials/skybox.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Materials/textures/skybox/Material.001_Metallic.png" type="Texture" id=8]
[ext_resource path="res://Materials/textures/skybox/Material.001_Normal_OpenGL.png" type="Texture" id=9]
[ext_resource path="res://Materials/textures/skybox/Material.001_Base_Color.png" type="Texture" id=10]
[ext_resource path="res://Materials/textures/skybox/Material.001_Emissive.png" type="Texture" id=11]
[ext_resource path="res://Materials/textures/skybox/Material.001_Roughness.png" type="Texture" id=12]

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 10 )
metallic_texture = ExtResource( 8 )
roughness_texture = ExtResource( 12 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 11 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 9 )

[sub_resource type="Animation" id=1]
resource_name = "TextDisplay"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="QuadMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0 )

[node name="RootNode" type="Spatial"]
script = ExtResource( 3 )

[node name="SkyBox" type="MeshInstance" parent="."]
mesh = ExtResource( 7 )
material/0 = SubResource( 4 )

[node name="SceneTransitionRect" parent="." instance=ExtResource( 6 )]

[node name="Dialog_Box" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_NinePatchRect" type="NinePatchRect" parent="Dialog_Box"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -200.0
margin_right = 350.0
margin_bottom = -50.0
texture = ExtResource( 4 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_MarginContainer" type="MarginContainer" parent="Dialog_Box/Body_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/Body_MarginContainer"]
margin_right = 660.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "This is a dialog box with a text in it . wow. amazing."
align = 1
valign = 1

[node name="Body_AnimationPlayer" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/Body_MarginContainer/Body_Label"]
anims/TextDisplay = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 1, 5 )
current = true
script = ExtResource( 1 )
sensitivity = 0.2
yaw_limit = 90
pitch_limit = 90

[node name="Sprite3D" type="Sprite3D" parent="Camera"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, -1 )
texture = ExtResource( 5 )

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )
collision_mask = 2147483649

[node name="Environment" parent="." instance=ExtResource( 2 )]

[node name="Zone_Lettres" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Plan" type="MeshInstance" parent="Zone_Lettres"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Movement_Tween" type="Tween" parent="."]
